@@ -543,6 +543,19 @@ assert_equal %Q{ENSURE\n}, %q{
     end
   end
   e = Bug5234.new
+}],
+ ['[ruby-dev:45656]', %q{
+  class Bug6460
+    include Enumerable
+    def each
+      begin
+        yield :foo
+      ensure
+        1.times { Proc.new }
+      end
+    end
+  end
+  e = Bug6460.new
 }]].each do |bug, src|
   assert_equal "foo", src + %q{e.detect {true}}, bug
   assert_equal "true", src + %q{e.any? {true}}, bug
